wip group invitations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -451,6 +451,7 @@
       "HEADING_RULES": "@:VIEWS.GROUP.RULES_OF_CONDUCT",
       "BTN_JOIN": "@:VIEWS.GROUP.BTN_JOIN",
       "BTN_GO_TO_GROUP": "View group without joining",
+      "GROUP_CREATED_BY": "Group created by",
       "LNK_CANCEL": "@:LNK_CANCEL"
     },
     "IDEABOX": {
@@ -1654,7 +1655,7 @@
     "GROUP_ADD_TOPICS_DESCRIPTION": "You can only add public topics to public groups. If a topic doesn't show up, it's probably a private topic, and would need to be made public before it could be added.",
     "GROUP_CREATE_TOPIC_HEADING": "Create and add new topic to group",
     "GROUP_CREATE_TOPIC_DESCRIPTION": "You can only add public topics to public groups. If a topic doesn't show up, it's probably a private topic, and would need to be made public before it could be added.",
-    "GROUP_INVITE_VIEW_HEADING": "Group invitation",
+    "GROUP_INVITE_VIEW_HEADING": "Group join",
     "GROUP_INVITE_VIEW_MESSAGE_MAIN": "@:COMPONENTS.GROUP_JOIN.MESSAGE_MAIN",
     "GROUP_INVITE_VIEW_LBL_GROUP_NAME": "Group name:",
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "Invited by:",
@@ -1673,6 +1674,9 @@
     "GROUP_INVITE_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
     "GROUP_INVITE_USER_DELETE_CONFIRM_SINGLE": "@:MODALS.TOPIC_INVITE_USER_DELETE_CONFIRM_SINGLE",
     "GROUP_INVITE_USER_DELETE_CONFIRM_ALL": "@:MODALS.TOPIC_INVITE_USER_DELETE_CONFIRM_ALL",
+    "GROUP_INVITE_VIEW_HEADING_AFTER_JOIN": "What you can do once you join a group",
+    "GROUP_INVITE_VIEW_AFTER_JOIN_ITEM_1": "Access any topics that have been added to the group",
+    "GROUP_INVITE_VIEW_AFTER_JOIN_ITEM_2": "Take part in the discussions and decision-making",
     "TOPIC_VOTE_DELEGATE_HEADING": "Delegate your vote for this topic",
     "TOPIC_VOTE_DELEGATE_TAB": "Delegate",
     "TOPIC_VOTE_DELEGATE_BTN_DELEGATE": "Delegate vote",
@@ -1714,7 +1718,7 @@
     "TOPIC_EVENT_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "Are you sure you want to delete this update?",
     "TOPIC_EVENT_DELETE_CONFIRM_BTN_NO": "@:BTN_NO",
     "TOPIC_EVENT_DELETE_CONFIRM_BTN_YES": "@:BTN_YES",
-    "TOPIC_INVITE_VIEW_HEADING": "Topic invitation",
+    "TOPIC_INVITE_VIEW_HEADING": "Topic join",
     "TOPIC_INVITE_VIEW_MESSAGE_MAIN": "You have been invited to join",
     "TOPIC_INVITE_VIEW_HEADING_INVITATION_DETAILS": "Invitation details",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_TITLE": "Topic title:",
