update dialog messages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1668,7 +1668,7 @@
     "GROUP_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
     "GROUP_INVITE_VIEW_LNK_LEARN_MORE": "Learn more about Citizen OS if you're new!",
     "GROUP_INVITE_VIEW_BTN_COMPLETE_ACCOUNT": "@:MODALS.TOPIC_INVITE_VIEW_BTN_COMPLETE_ACCOUNT",
-    "GROUP_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Attention!</b> You must finish creating your account with {{email}} to access this group",
+    "GROUP_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "You must finish creating your account with {{email}} to access this group",
     "GROUP_INVITE_USER_DELETE_CONFIRM_HEADING": "@:MODALS.TOPIC_INVITE_USER_DELETE_CONFIRM_HEADING",
     "GROUP_INVITE_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "@:MODALS.TOPIC_INVITE_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE",
     "GROUP_INVITE_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
@@ -1725,7 +1725,7 @@
     "TOPIC_INVITE_VIEW_LBL_INVITED_BY": "Invited by:",
     "TOPIC_INVITE_VIEW_LBL_INVITATION_SENT_TO": "Invitation sent to:",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_LEVEL": "Topic rights:",
-    "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "<b>Heads up!</b> You must finish creating your account with {{email}} to access this topic",
+    "TOPIC_INVITE_VIEW_TXT_COMPLETE_ACCOUNT": "You must finish creating your account with {{email}} to access this topic",
     "TOPIC_INVITE_VIEW_BTN_LOGIN_AS": "To join this topic, please log in using {{email}}",
     "TOPIC_INVITE_VIEW_HEADING_AFTER_JOIN": "What you can do once you join a topic",
     "TOPIC_INVITE_VIEW_AFTER_JOIN_ITEM_1": "@:COMPONENTS.TOPIC_JOIN.ITEM_PARTICIPATE",
