--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2319,11 +2319,10 @@
       "SETTINGS_HEADING_ADVANCED_SETTINGS_DESC": "Further options to customise the idea gathering phase.",
       "LBL_DISABLE_REPLIES": "Replies are turned: {{value}}",
       "LBL_DISABLE_REPLIES_DESC": "Disable replies to ideas",
-<<<<<<< HEAD
-=======
+      "LBL_CREATE_ITEA_TEMPLATE": "Idea template is turned: {{value}}",
+      "LBL_CREATE_ITEA_TEMPLATE_DESC": "You can create a template to give participants guidance how to compose their idea.",
       "LBL_ALLOW_ANONYMOUS": "Anonymous ideas are turned: {{value}}",
       "LBL_ALLOW_ANONYMOUS_DESC": "Ideas are posted without showing the poster’s name",
->>>>>>> master
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
