add anon idea popup

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1733,6 +1733,9 @@
     "TOPIC_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
     "TOPIC_INVITE_VIEW_LNK_LEARN_MORE": "Learn more about Citizen OS if you're new!",
     "TOPIC_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
+    "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Posting anonymously",
+    "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_1": "Are you sure?",
+    "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_2": "Remember, anonymous ideas can't be edited or deleted after they're posted. Once it's posted, it's permanent!",
     "ACTIVITY_MODAL_HEADING": "@:DEFAULT.NAV.LNK_ACTIVITY",
     "LANGUAGES_MODAL_HEADING": "Select your language",
     "LANGUAGES_MODAL_HELP_US_TRANSLATE": "Your language missing? Help us translate!",
@@ -2327,6 +2330,7 @@
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
       "NO_IDEAS_BTN_ADD": "Add idea",
+      "KEEP_EDITING": "Keep editing",
       "NO_IDEAS_DESC_HEADING": "How idea gathering works",
       "NO_IDEAS_DESC_BEFORE": "By adding an idea gathering phase to your topic, you incentivise your participants to share ideas. Ideas can be replied to and 'liked', and the top ideas will show up higher.",
       "NO_IDEAS_DESC_AFTER": "Afterwards you can take the best idea(s) and put them to the vote to reach a final conclusion.",
