--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -355,7 +355,8 @@
       "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "@:COMPONENTS.ADD_IDEA.PLACEHOLDER_EXPLAIN_YOUR_IDEA",
       "BTN_ADD_IMAGE": "@:COMPONENTS.ADD_IDEA.BTN_ADD_IMAGE",
       "BTN_IDEA_DRAFT": "@:COMPONENTS.ADD_IDEA.BTN_IDEA_DRAFT",
-      "BTN_IDEA_POST": "Update idea",
+      "BTN_IDEA_UPDATE": "Update idea",
+      "BTN_IDEA_POST": "@:COMPONENTS.ADD_IDEA.BTN_IDEA_POST",
       "MSG_ERROR_SUBJECT": "@:COMPONENTS.ADD_IDEA.MSG_ERROR_SUBJECT",
       "MSG_ERROR_DESCRIPTION": "@:COMPONENTS.ADD_IDEA.MSG_ERROR_DESCRIPTION"
     },
