--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1656,7 +1656,7 @@
     "GROUP_ADD_TOPICS_DESCRIPTION": "You can only add public topics to public groups. If a topic doesn't show up, it's probably a private topic, and would need to be made public before it could be added.",
     "GROUP_CREATE_TOPIC_HEADING": "Create and add new topic to group",
     "GROUP_CREATE_TOPIC_DESCRIPTION": "You can only add public topics to public groups. If a topic doesn't show up, it's probably a private topic, and would need to be made public before it could be added.",
-    "GROUP_INVITE_VIEW_HEADING": "Group join",
+    "GROUP_INVITE_VIEW_HEADING": "Join group",
     "GROUP_INVITE_VIEW_MESSAGE_MAIN": "@:COMPONENTS.GROUP_JOIN.MESSAGE_MAIN",
     "GROUP_INVITE_VIEW_LBL_GROUP_NAME": "Group name:",
     "GROUP_INVITE_VIEW_LBL_INVITED_BY": "Invited by:",
@@ -1719,7 +1719,7 @@
     "TOPIC_EVENT_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "Are you sure you want to delete this update?",
     "TOPIC_EVENT_DELETE_CONFIRM_BTN_NO": "@:BTN_NO",
     "TOPIC_EVENT_DELETE_CONFIRM_BTN_YES": "@:BTN_YES",
-    "TOPIC_INVITE_VIEW_HEADING": "Topic join",
+    "TOPIC_INVITE_VIEW_HEADING": "Join topic",
     "TOPIC_INVITE_VIEW_MESSAGE_MAIN": "You have been invited to join",
     "TOPIC_INVITE_VIEW_HEADING_INVITATION_DETAILS": "Invitation details",
     "TOPIC_INVITE_VIEW_LBL_TOPIC_TITLE": "Topic title:",
