Update anonymous idea drafts

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1742,6 +1742,10 @@
     "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Posting anonymously",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_1": "Are you sure it's ready?",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_2": "Remember, anonymous ideas can't be edited or deleted after they're posted. Once it's posted, it's permanent!",
+    "TOPIC_IDEA_POSTING_DRAFT_ANONYMOUSLY": "Protecting your data",
+    "TOPIC_IDEA_POSTING_DRAFT_ANONIMOUSLY_TEXT_1": "To keep it safe, we won't save your demographic data in your draft idea.",
+    "TOPIC_IDEA_POSTING_DRAFT_ANONIMOUSLY_TEXT_2": "You can add the data back in when you publish the idea. Once posted, your anonymous idea will no longer be connected to your Citizen OS account.",
+    "TOPIC_IDEA_POSTING_DRAFT_ANONIMOUSLY_BTN_GOT_IT": "Got it",
     "ACTIVITY_MODAL_HEADING": "@:DEFAULT.NAV.LNK_ACTIVITY",
     "LANGUAGES_MODAL_HEADING": "Select your language",
     "LANGUAGES_MODAL_HELP_US_TRANSLATE": "Your language missing? Help us translate!",
