--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2341,7 +2341,7 @@
       "DEMOGRAPHICS_DATA_DESCRIPTION": "Fields will be mandatory. Requested fields cannot be changed once idea gathering starts.",
       "DEMOGRAPHICS_DATA_AGE": "Age",
       "DEMOGRAPHICS_DATA_GENDER": "Gender",
-      "DEMOGRAPHICS_DATA_RESIDENCE": "Residence",
+      "DEMOGRAPHICS_DATA_RESIDENCE": "Municipality",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
