--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1740,7 +1740,9 @@
     "TOPIC_INVITE_VIEW_LNK_LEARN_MORE": "Learn more about Citizen OS if you're new!",
     "TOPIC_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING": "Close without saving?",
-    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Are you sure you wanted to close your idea without saving as a draft? All your changes will be lost.",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Are you sure you want to close your idea without saving as a draft? To save your changes, go back and choose 'Save as draft'.",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_CLOSE": "Yes, close",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_BACK": "No, go back",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Posting anonymously",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_1": "Are you sure it's ready?",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_2": "Remember, anonymous ideas can't be edited or deleted after they're posted. Once it's posted, it's permanent!",
