--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1746,7 +1746,7 @@
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_CLOSE": "Yes, close",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_BACK": "No, go back",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Posting anonymously",
-    "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_1": "Are you sure it's ready?",
+    "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_1": "Last chance to edit",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY_TEXT_2": "Remember, anonymous ideas can't be edited or deleted after they're posted. Once it's posted, it's permanent!",
     "TOPIC_IDEA_POSTING_DRAFT_ANONYMOUSLY": "Protecting your data",
     "TOPIC_IDEA_POSTING_DRAFT_ANONIMOUSLY_TEXT_1": "To keep it safe, we won't save your demographic data in your draft idea.",
