--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1552,6 +1552,10 @@
     "TOPIC_DELETE_REPLY_TXT_ARE_YOU_SURE": "Are you sure you want to delete this reply? You cannot undo this action.",
     "TOPIC_DELETE_REPLY_BTN_NO": "@:MODALS.TOPIC_ARGUMENT_REPORT_BTN_NO",
     "TOPIC_DELETE_REPLY_BTN_YES": "Yes, delete this reply",
+    "PROMISE_HEADING": "Citizen OS Foundation's data promise",
+    "PROMISE_TEXT": "We're a registered non-profit with a mission to enhance democracy, and data privacy is our highest priority.",
+    "PROMISE_TEXT_BOLD": "No Ads. No Trackers. No Selling Data. Ever.",
+    "PROMISE_TEXT_MORE": "Want to know more? Read our",
     "LOGIN_HEADING": "Please log in to Citizen OS to continue",
     "LOGIN_EMAIL_HEADING": "Log in with email",
     "LOGIN_BTN_LOGIN_FACEBOOK": "Log in with Facebook account",
