--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1554,7 +1554,7 @@
     "TOPIC_DELETE_REPLY_BTN_YES": "Yes, delete this reply",
     "PROMISE_HEADING": "Citizen OS Foundation's data promise",
     "PROMISE_TEXT": "We're a registered non-profit with a mission to enhance democracy, and data privacy is our highest priority.",
-    "PROMISE_TEXT_BOLD": "No Ads. No Trackers. No Selling Data. Ever.",
+    "PROMISE_TEXT_BOLD": "No Ads. No Invasive Trackers. No Selling Data. Ever.",
     "PROMISE_TEXT_MORE": "Want to know more? Read our",
     "LOGIN_HEADING": "Please log in to Citizen OS to continue",
     "LOGIN_EMAIL_HEADING": "Log in with email",
