--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1382,7 +1382,7 @@
     "TOPIC_EDIT_DISABLED_HEADING": "Editing topic content is no longer available",
     "TOPIC_EDIT_DISABLED_DESCRIPTION": "This topic text has been locked and is no longer editable",
     "TOPIC_EDIT_DISABLED_WHY": "Why?",
-    "TOPIC_EDIT_DISABLED_WHY_DESCRIPTION": "When a voting or action phase gets started, the topic text serves as the single source of truth. By locking it, we can ensure that there's full transparency of participants to know what they're voting on or what next steps are.",
+    "TOPIC_EDIT_DISABLED_WHY_DESCRIPTION": "When a voting or action phase gets started, the topic text serves as the single source of truth. By locking it, we can ensure there's full transparency for participants to know what they're voting on or what decisions need to be acted on.",
     "TOPIC_EDIT_DISABLED_INFO": "You can still edit settings",
     "TOPIC_EDIT_DISABLED_BTN_SETTINGS": "View settings",
     "TOPIC_EDIT_DISABLED_LNK_CANCEL": "@:LNK_CANCEL",
