--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,7 @@
       "PLACEHOLDER_EXPLAIN_YOUR_IDEA": "Explain your idea",
       "BTN_ADD_IMAGE": "Add image",
       "BTN_IDEA_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
+      "BTN_DELETE_DRAFT": "Delete draft",
       "BTN_IDEA_POST": "Add your idea",
       "MSG_SUCCESS": "Idea successfully posted",
       "MSG_ERROR_SUBJECT": "Idea heading must be 1 to {{chars}} characters long.",
@@ -1746,8 +1747,8 @@
     "TOPIC_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "You can also:",
     "TOPIC_INVITE_VIEW_LNK_LEARN_MORE": "Learn more about Citizen OS if you're new!",
     "TOPIC_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
-    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING": "Close without saving?",
-    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Are you sure you want to close your idea without saving as a draft? To save your changes, go back and choose 'Save as draft'.",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING": "Close without posting?",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Your draft idea has been autosaved, so you can always come back and post it another time!",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_CLOSE": "Yes, close",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_BACK": "No, go back",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Last chance to edit",
