--- a/src/assets/i18n/sk.json
+++ b/src/assets/i18n/sk.json
@@ -1746,8 +1746,8 @@
     "TOPIC_INVITE_VIEW_LBL_ADDITIONAL_ACTIONS": "Môžete sa tiež:",
     "TOPIC_INVITE_VIEW_LNK_LEARN_MORE": "Dozvedieť sa viac o Citizen OS, ak ste noví!",
     "TOPIC_INVITE_VIEW_LNK_CANCEL": "@:LNK_CANCEL",
-    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING": "Close without saving?",
-    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Are you sure you want to close your idea without saving as a draft? To save your changes, go back and choose 'Save as draft'.",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING": "Close without posting?",
+    "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_TEXT_1": "Your draft idea has been autosaved, so you can always come back and post it another time!",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_CLOSE": "Yes, close",
     "TOPIC_IDEA_CLOSE_WITHOUT_SAVING_BACK": "No, go back",
     "TOPIC_IDEA_POSTING_ANONIMOUSLY": "Last chance to edit",
