add autosave loaders and styles

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -481,6 +481,7 @@
     "IDEA_DIALOG": {
       "TOOLTIP_REPLIES_DISABLED": "Replies are turned off",
       "LOADING_IMAGES": "Loading images",
+      "AUTOSAVING": "Autosaving",
       "BTN_REPLY": "@:COMPONENTS.ARGUMENT.BTN_REPLY",
       "OPTION_EDIT": "@:COMPONENTS.IDEABOX.OPTION_EDIT",
       "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
