--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3464,7 +3464,7 @@
   "MSG_ERROR_POST_API_AUTH_SIGNUP_40000_PASSWORD": "Password must be at least 6 characters long, containing at least 1 digit, 1 lower-case and 1 upper-case character.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40003_PASSWORD": "Wrong password.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40002": "Account verification has not been completed. Please check your email.",
-  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or password reset code.",
+  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or reset code. Password reset codes expire after 1 hour.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_ACCOUNT": "Check your email to verify your account.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_NEW_EMAIL_ADDRESS": "Your email address has been updated. Check your mail to verify your new email address. From now on, use this email address to log in.",
   "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_SEND_40002_EMAIL": "An account with this email does not exist.",
