--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2365,9 +2365,11 @@
       "DEMOGRAPHICS_DATA_GENDER_FEMALE": "Female",
       "DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER": "Your gender (optional)",
       "DEMOGRAPHICS_DATA_GENDER_OTHER": "Other - please specify",
+      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "Other",
       "DEMOGRAPHICS_DATA_RESIDENCE": "Municipality",
       "DEMOGRAPHICS_DATA_RESIDENCE_OTHER": "Other - please specify",
       "DEMOGRAPHICS_DATA_RESIDENCE_PLACEHOLDER": "Your municipality (optional)",
+      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "Other",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
