--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -274,7 +274,7 @@
       "LBL_NAME": "Please name your new folder",
       "ADD_NAME_ERROR_MSG_INVALID": "Name cannot be empty",
       "PLACEHOLDER_NAME": "@:VIEWS.MY_TOPICS_TOPICID.LNK_NAME",
-      "LBL_IDEAS_SELECTION": "Select the ideas you immediately want to add to this folder",
+      "LBL_IDEAS_SELECTION": "Select the ideas you want to include in the voting options",
       "BTN_CREATE": "Create folder",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "LBL_IDEAS": "Ideas ({{count}})",
@@ -766,7 +766,9 @@
       "HEADING_SEARCH_RESULTS": "Global search results",
       "HEADING_RESULTS_IN": "Search results in: <b>{{context}}</b>",
       "LNK_VIEW_MORE_RESULTS": "View more results",
+      "LNK_HELP_PANEL": "Try here.",
       "TXT_OOPS_NO_RESULTS": "We couldn’t find any results matching your search :(",
+      "TXT_NO_RESULTS_FOUND": "No results found. Looking for help?",
       "TXT_MAYBE_TYPO": "Maybe there's a typo in your search?"
     },
     "TOPIC_IDEATION": {
