--- a/src/assets/i18n/et.json
+++ b/src/assets/i18n/et.json
@@ -134,6 +134,8 @@
       "BTN_IDEA_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
       "BTN_DELETE_DRAFT": "Delete draft",
       "BTN_IDEA_POST": "Lisa oma idee",
+      "BTN_EXPAND": "Expand",
+      "BTN_COLLAPSE": "Collapse",
       "MSG_SUCCESS": "Idee on edukalt postitatud",
       "MSG_ERROR_SUBJECT": "Idee pealkirja lubatud pikkus on 1 kuni {{chars}} sümbolit.",
       "FIELD_IS_MANDATORY": "Kohustuslik väli",
@@ -274,7 +276,7 @@
       "LBL_NAME": "Palun pane oma uuele kaustale nimi",
       "ADD_NAME_ERROR_MSG_INVALID": "Nimi ei saa olla tühi",
       "PLACEHOLDER_NAME": "@:VIEWS.MY_TOPICS_TOPICID.LNK_NAME",
-      "LBL_IDEAS_SELECTION": "Vali ideed, mille soovid kohe sellesse kausta lisada",
+      "LBL_IDEAS_SELECTION": "Select the ideas you want to include in the voting options",
       "BTN_CREATE": "Loo kaust",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "LBL_IDEAS": "Ideed ({{count}})",
@@ -766,7 +768,9 @@
       "HEADING_SEARCH_RESULTS": "Otsingu tulemused",
       "HEADING_RESULTS_IN": "Otsingu tulemused: <b>{{context}}</b>",
       "LNK_VIEW_MORE_RESULTS": "Kuva rohkem tulemusi",
+      "LNK_HELP_PANEL": "Try here.",
       "TXT_OOPS_NO_RESULTS": "Me ei leidnud sinu otsingule vastavaid tulemusi :(",
+      "TXT_NO_RESULTS_FOUND": "No results found. Looking for help?",
       "TXT_MAYBE_TYPO": "Võib-olla tegid otsisõnas kirjavea?"
     },
     "TOPIC_IDEATION": {
@@ -813,6 +817,7 @@
       "OPTION_DELETE_FOLDER": "Kustuta kaust",
       "BTN_CREATE_NEW_FOLDER": "Loo uus kaust",
       "NO_FOLDERS_HEADING": "Ideekaustad puuduvad",
+      "NO_ITEMS_FOUND": "No results found with these filters. Try adjusting your filters and search again.",
       "NO_FOLDERS_DESC": "Teemade administraatorid saavad luua kaustu samasse kategooriasse sobivate ideede rühmitamiseks."
     },
     "TOUR": {
@@ -2361,9 +2366,11 @@
       "DEMOGRAPHICS_DATA_GENDER_FEMALE": "Naine",
       "DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER": "Sinu sugu (valikuline)",
       "DEMOGRAPHICS_DATA_GENDER_OTHER": "Muu - palun täpsusta",
+      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "Other",
       "DEMOGRAPHICS_DATA_RESIDENCE": "Omavalitsus",
       "DEMOGRAPHICS_DATA_RESIDENCE_OTHER": "Muu - palun täpsusta",
       "DEMOGRAPHICS_DATA_RESIDENCE_PLACEHOLDER": "Su omavalitsus (valikuline)",
+      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "Other",
       "PREVIEW_INFO": "<b>See on sinu teema eelvaade!</b> Enne hääletuse alustamist saad oma teemat igal ajal redigeerida.",
       "BTN_IDEATION_ACTIONS": "Halda ideekorjet",
       "NO_IDEAS_HEADING": "Ideid veel pole",
@@ -3467,7 +3474,7 @@
   "MSG_ERROR_POST_API_AUTH_SIGNUP_40000_PASSWORD": "Salasõna peab sisaldama vähemalt kuut tähemärki, üht numbrit, üht väike- ja üht suurtähte.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40003_PASSWORD": "Vale salasõna.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40002": "Konto on veel kinnitamata. Palun vaata oma e-postkasti.",
-  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or password reset code.",
+  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or reset code. Password reset codes expire after 1 hour.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_ACCOUNT": "Palun vaata e-postiga saadetud kinnituskirja.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_NEW_EMAIL_ADDRESS": "Uuendasime su e-posti aadressi – varsti leiad oma e-postkastist kirja, kus palutakse uus e-posti aadress kinnitada. Nüüdsest saad sisse logida uue e-posti aadressiga.",
   "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_SEND_40002_EMAIL": "Sellise e-posti aadressiga kontot süsteemis ei ole.",
