--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -134,6 +134,8 @@
       "BTN_IDEA_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
       "BTN_DELETE_DRAFT": "Delete draft",
       "BTN_IDEA_POST": "Добавить свою идею",
+      "BTN_EXPAND": "Expand",
+      "BTN_COLLAPSE": "Collapse",
       "MSG_SUCCESS": "Идея успешно опубликована",
       "MSG_ERROR_SUBJECT": "Заголовок идеи должен быть длиной от 1 до {{chars}} символов.",
       "FIELD_IS_MANDATORY": "Поле является обязательным",
@@ -274,7 +276,7 @@
       "LBL_NAME": "Как назовем Вашу новую папку?",
       "ADD_NAME_ERROR_MSG_INVALID": "Поле для имени не может быть пустым",
       "PLACEHOLDER_NAME": "@:VIEWS.MY_TOPICS_TOPICID.LNK_NAME",
-      "LBL_IDEAS_SELECTION": "Выберите идеи, которые желаете сразу добавить в эту папку",
+      "LBL_IDEAS_SELECTION": "Select the ideas you want to include in the voting options",
       "BTN_CREATE": "Создать папку",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "LBL_IDEAS": "Идей: ({{count}})",
@@ -766,7 +768,9 @@
       "HEADING_SEARCH_RESULTS": "Результаты глобального поиска",
       "HEADING_RESULTS_IN": "Результаты поиска в: <b>{{context}}</b>",
       "LNK_VIEW_MORE_RESULTS": "Показать больше результатов",
+      "LNK_HELP_PANEL": "Try here.",
       "TXT_OOPS_NO_RESULTS": "Мы не нашли результатов, соответствующих запросу :(",
+      "TXT_NO_RESULTS_FOUND": "No results found. Looking for help?",
       "TXT_MAYBE_TYPO": "Возможно, в ваш запрос закралась опечатка?"
     },
     "TOPIC_IDEATION": {
@@ -813,6 +817,7 @@
       "OPTION_DELETE_FOLDER": "Удалить папку",
       "BTN_CREATE_NEW_FOLDER": "Создать новую папку",
       "NO_FOLDERS_HEADING": "Папки с идеями отсутствуют",
+      "NO_ITEMS_FOUND": "No results found with these filters. Try adjusting your filters and search again.",
       "NO_FOLDERS_DESC": "Администраторы темы могут создавать папки для группировки идей, относящихся к одной категории."
     },
     "TOUR": {
@@ -2361,9 +2366,11 @@
       "DEMOGRAPHICS_DATA_GENDER_FEMALE": "Женский",
       "DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER": "Ваш пол (необязательно)",
       "DEMOGRAPHICS_DATA_GENDER_OTHER": "Другой - укажите ваш вариант",
+      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "Other",
       "DEMOGRAPHICS_DATA_RESIDENCE": "Уезд",
       "DEMOGRAPHICS_DATA_RESIDENCE_OTHER": "Другой - укажите ваш вариант",
       "DEMOGRAPHICS_DATA_RESIDENCE_PLACEHOLDER": "Ваш уезд (необязательно)",
+      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "Other",
       "PREVIEW_INFO": "<b>Это предварительный просмотр вашей темы.</b> Вы всегда можете отредактировать свою тему в любой момент до начала голосования.",
       "BTN_IDEATION_ACTIONS": "Управление сбором идей",
       "NO_IDEAS_HEADING": "Пока нет идей",
@@ -3467,7 +3474,7 @@
   "MSG_ERROR_POST_API_AUTH_SIGNUP_40000_PASSWORD": "Пароль должен быть длиной минимум в 6 знаков и обязательно содержать 1 цифру, 1 заглавную и 1 строчную букву.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40003_PASSWORD": "Неверный пароль.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40002": "Проверка учетной записи еще не завершена. Пожалуйста, проверьте вашу эл. почту.",
-  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or password reset code.",
+  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or reset code. Password reset codes expire after 1 hour.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_ACCOUNT": "Пожалуйста, проверьте свою эл. почту на наличие подтверждающего регистрацию письма.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_NEW_EMAIL_ADDRESS": "Ваш адрес эл. почты обновлен. Проверьте вашу эл. почту, чтобы подтвердить ваш новый адрес. С этого момента используйте этот адрес эл. почты для входа в систему.",
   "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_SEND_40002_EMAIL": "Пользователя с таким адресом эл. почты в системе не существует.",
