--- a/src/assets/i18n/sk.json
+++ b/src/assets/i18n/sk.json
@@ -134,6 +134,8 @@
       "BTN_IDEA_DRAFT": "@:VIEWS.TOPIC_CREATE.FOOTER_BTN_SAVE_AS_DRAFT",
       "BTN_DELETE_DRAFT": "Delete draft",
       "BTN_IDEA_POST": "Pridaj nápad",
+      "BTN_EXPAND": "Expand",
+      "BTN_COLLAPSE": "Collapse",
       "MSG_SUCCESS": "Nápad úspešne zverejnený",
       "MSG_ERROR_SUBJECT": "Titulok nápadu musí mať dĺžku od 1 do {{chars}} znakov.",
       "FIELD_IS_MANDATORY": "Field is mandatory",
@@ -274,7 +276,7 @@
       "LBL_NAME": "Pomenujte svoj nový priečinok",
       "ADD_NAME_ERROR_MSG_INVALID": "Názov nemôže byť prázdny",
       "PLACEHOLDER_NAME": "@:VIEWS.MY_TOPICS_TOPICID.LNK_NAME",
-      "LBL_IDEAS_SELECTION": "Vyberte nápady, ktoré chcete ihneď pridať do tohto priečinka",
+      "LBL_IDEAS_SELECTION": "Select the ideas you want to include in the voting options",
       "BTN_CREATE": "Vytvoriť priečinok",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "LBL_IDEAS": "Nápady ({{count}})",
@@ -766,7 +768,9 @@
       "HEADING_SEARCH_RESULTS": "Celkové výsledky vyhľadávania",
       "HEADING_RESULTS_IN": "Výsledky vyhľadávania v: <b>{{context}}</b>",
       "LNK_VIEW_MORE_RESULTS": "Zobraziť viac výsledkov",
+      "LNK_HELP_PANEL": "Try here.",
       "TXT_OOPS_NO_RESULTS": "Nenašli sa žiadne výsledky zodpovedajúce vášmu hľadaniu :(",
+      "TXT_NO_RESULTS_FOUND": "No results found. Looking for help?",
       "TXT_MAYBE_TYPO": "Možno máte vo vyhľadávaní preklep?"
     },
     "TOPIC_IDEATION": {
@@ -813,6 +817,7 @@
       "OPTION_DELETE_FOLDER": "Odstrániť priečinok",
       "BTN_CREATE_NEW_FOLDER": "Vytvoriť nový priečinok",
       "NO_FOLDERS_HEADING": "Zatiaľ žiadne priečinky nápadov",
+      "NO_ITEMS_FOUND": "No results found with these filters. Try adjusting your filters and search again.",
       "NO_FOLDERS_DESC": "Admini témy môžu vytvárať priečinky, kde sa zoskupia nápady spadajúce do rovnakej kategórie."
     },
     "TOUR": {
@@ -2361,9 +2366,11 @@
       "DEMOGRAPHICS_DATA_GENDER_FEMALE": "Female",
       "DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER": "Your gender (optional)",
       "DEMOGRAPHICS_DATA_GENDER_OTHER": "Other - please specify",
+      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "Other",
       "DEMOGRAPHICS_DATA_RESIDENCE": "Municipality",
       "DEMOGRAPHICS_DATA_RESIDENCE_OTHER": "Other - please specify",
       "DEMOGRAPHICS_DATA_RESIDENCE_PLACEHOLDER": "Your municipality (optional)",
+      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "Other",
       "PREVIEW_INFO": "<b>Toto je ukážka vašej témy!</b> Svoju tému môžete upraviť kedykoľvek pred začatím hlasovania.",
       "BTN_IDEATION_ACTIONS": "Spravovať získavanie nápadov",
       "NO_IDEAS_HEADING": "Zatiaľ žiadne nápady",
@@ -3467,7 +3474,7 @@
   "MSG_ERROR_POST_API_AUTH_SIGNUP_40000_PASSWORD": "Heslo musí mať aspoň 6 znakov, musí obsahovať aspoň 1 číslicu, 1 malé písmeno a 1 veľké písmeno.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40003_PASSWORD": "Nesprávne heslo.",
   "MSG_ERROR_POST_API_AUTH_LOGIN_40002": "Overovanie účtu nebolo ukončené. Skontrolujte si prosím váš email.",
-  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or password reset code.",
+  "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_40000": "Invalid email, password or reset code. Password reset codes expire after 1 hour.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_ACCOUNT": "Skontrolujte si email pre overenie vášho účtu.",
   "MSG_INFO_CHECK_EMAIL_TO_VERIFY_YOUR_NEW_EMAIL_ADDRESS": "Vaša emailová adresa bola aktualizovaná. Skontrolujte si mail, aby ste overili svoju novú mailovú adresu. Odteraz používajte pri prihlasovaní túto adresu.",
   "MSG_ERROR_POST_API_AUTH_PASSWORD_RESET_SEND_40002_EMAIL": "Účet s týmto mailom neexistuje.",
