New Crowdin updates (#2328)
* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Bulgarian)

* New translations en.json (Czech)

* New translations en.json (German)

* New translations en.json (Dutch)

* New translations en.json (Russian)

* New translations en.json (Slovak)

* New translations en.json (Albanian)

* New translations en.json (Ukrainian)

* New translations en.json (Indonesian)

* New translations en.json (Estonian)

* New translations en.json (Swahili)

* New translations en.json (Somali)

* New translations en.json (Russian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Bulgarian)

* New translations en.json (Czech)

* New translations en.json (German)

* New translations en.json (Dutch)

* New translations en.json (Russian)

* New translations en.json (Slovak)

* New translations en.json (Albanian)

* New translations en.json (Ukrainian)

* New translations en.json (Indonesian)

* New translations en.json (Estonian)

* New translations en.json (Swahili)

* New translations en.json (Somali)

* New translations en.json (Russian)

* New translations en.json (Estonian)

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -787,6 +787,7 @@
       "OPT_DOWNLOAD_IDEAS": "Exportar ideas",
       "OPT_EDIT_IDEATION": "Editar recolección de ideas",
       "OPT_CLOSE_IDEATION": "Finalizar recolección de ideas",
+      "SEARCH": "@:DEFAULT.NAV_MOBILE.BTN_SEARCH",
       "FILTER_ALL": "@:VIEWS.MY_TOPICS.FILTER_ALL",
       "FILTER_TYPE_YOUR_IDEAS": "Tus ideas",
       "FILTER_TYPE_FAVOURITES": "Ideas guardadas",
@@ -2366,11 +2367,11 @@
       "DEMOGRAPHICS_DATA_GENDER_FEMALE": "Female",
       "DEMOGRAPHICS_DATA_GENDER_PLACEHOLDER": "Your gender (optional)",
       "DEMOGRAPHICS_DATA_GENDER_OTHER": "Other - please specify",
-      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "Other",
+      "DEMOGRAPHICS_DATA_GENDER_OTHER_PLACEHOLDER": "@:TXT_REPORT_TYPES_OTHER",
       "DEMOGRAPHICS_DATA_RESIDENCE": "Municipality",
       "DEMOGRAPHICS_DATA_RESIDENCE_OTHER": "Other - please specify",
       "DEMOGRAPHICS_DATA_RESIDENCE_PLACEHOLDER": "Your municipality (optional)",
-      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "Other",
+      "DEMOGRAPHICS_DATA_RESIDENCE_OTHER_PLACEHOLDER": "@:TXT_REPORT_TYPES_OTHER",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage idea gathering",
       "NO_IDEAS_HEADING": "There are no ideas yet",
